--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         </div>
     </nav>
 
-    <header>
+    <!-- <header>
         <div class="headline">
             <h2>Escola Exercito Brasileiro </h2>
         </div>
-    </header>
+    </header> -->
 </body>
 </html>
