--- a/index.html
+++ b/index.html
@@ -20,10 +20,25 @@
         </div>
     </nav>
 
-    <!-- <header>
-        <div class="headline">
-            <h2>Escola Exercito Brasileiro </h2>
-        </div>
-    </header> -->
+       <a title="Página do FaceBook: Exercito Em Foco" target="_blank" href="https://www.facebook.com/ExercitoemFoco/"><img class="facebookicon" src="./img/facebook.png"></a>
+
+       <section>
+            <h2 class="section">Escola Exercito Brasileiro</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium nobis corporis hic optio perspiciatis velit temporibus eius eum reprehenderit cumque? Eligendi error magni molestias veritatis tempora, nulla ratione atque omnis.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium nobis corporis hic optio perspiciatis velit temporibus eius eum reprehenderit cumque? Eligendi error magni molestias veritatis tempora, nulla ratione atque omnis.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium nobis corporis hic optio perspiciatis velit temporibus eius eum reprehenderit cumque? Eligendi error magni molestias veritatis tempora, nulla ratione atque omnis.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium nobis corporis hic optio perspiciatis velit temporibus eius eum reprehenderit cumque? Eligendi error magni molestias veritatis tempora, nulla ratione atque omnis.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium nobis corporis hic optio perspiciatis velit temporibus eius eum reprehenderit cumque? Eligendi error magni molestias veritatis tempora, nulla ratione atque omnis.</p>
+       </section> 
+
+    <footer>
+        <h2 class="logo-rodape">Exercito Em Foco</h2>
+        <ul class="lista-rodape">
+            <a href="#" class="linksrodape"><li>Link1</li></a>
+            <a href="#" class="linksrodape"><li>Link2</li></a>
+            <a href="#" class="linksrodape"><li>Link3</li></a>
+            <a href="#" class="linksrodape"><li>Link4</li></a>
+        </ul>
+    </footer>
 </body>
 </html>
