--- a/contato.html
+++ b/contato.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./img/exercitoemfocologo.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/index.css">
-    <link rel="stylesheet" href="./css/responsivo.css">
-    <title>Exercito em Foco!</title>
+    <title>Exercito em Foco | Contato</title>
 </head>
 <body>
     <nav class="navbar">
@@ -17,15 +16,9 @@
         <div class="menu">
             <a href="./entrar/login.html" class="linksmenu">Entrar</a>
             <a href="./contato.html" class="linksmenu">Contato</a>
-            <a href="./sobre.html" class="linksmenu">Sobre</a>
+            <a href="./sobre.html" class="linksmenu">Criadores</a>
         </div>
     </nav>
-
-    <header class="responsivecell">
-            <a href="./entrar/login.html" class="linksresponsive">Entrar</a>
-            <a href="./contato.html" class="linksresponsive">Contato</a>
-            <a href="./sobre.html" class="linksresponsive">Sobre</a>
-    </header>
 
        <a title="Página do FaceBook: Exercito Em Foco" target="_blank" href="https://www.facebook.com/ExercitoemFoco/"><img class="facebookicon" src="./img/facebook.png"></a>
 
