--- a/entrar/login.html
+++ b/entrar/login.html
@@ -5,24 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../img/exercitoemfocologo.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/index.css">
-    <link rel="stylesheet" href="./css/login.css">
     <title>Exercito em Foco!</title>
 </head>
 <body>
     <nav class="navbar">
-        <a href="index.html"><img class="logo" src="../img/exercitoemfocologo.png"></a>
+        <a href="../index.html"><img class="logo" src="../img/exercitoemfocologo.png"></a>
         
-    <a href="index.html"><h1 class="logoh1">Exercito Em Foco</h1></a>
+    <a href="../index.html"><h1 class="logoh1">Exercito Em Foco</h1></a>
         
         <div class="menu">
-            <a href="./entrar/login.html" class="linksmenu">Entrar</a>
+            <a href="./cadastro.html" class="linksmenu">Cadastrar</a>
             <a href="./" class="linksmenu">Contato</a>
             <a href="./" class="linksmenu">Criadores</a>
         </div>
     </nav>
 
-    <!-- <header>
-        <h2 class="Entrar"></h1>
-    </header> -->
+       <a title="Página do FaceBook: Exercito Em Foco" target="_blank" href="https://www.facebook.com/ExercitoemFoco/"><img class="facebookicon" src="../img/facebook.png"></a>
+
+       <section class="forms">
+            <!-- <h2 class="section">Escola Exercito Brasileiro</h2> -->
+       </section> 
+
+    <footer>
+        <h2 class="logo-rodape">Exercito Em Foco</h2>
+    </footer>
 </body>
 </html>
